--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,9 @@ body{
     justify-content: center;
     align-items: center;
 }
+.eth{
+    color: var(--aqua);
+}
 .card{
     background: var(--light-oxford-blue);
     max-width: 350px;
