--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
     min-height: 100vh;
     padding: 25px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 .eth{
